--- a/Frontend/vscode-themed/src/components/Explorer/Explorer.css
+++ b/Frontend/vscode-themed/src/components/Explorer/Explorer.css
@@ -85,9 +85,8 @@
   background-color: #0078d4;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1024px) {
   .explorer-container {
     display: none;
-    width: 0;
   }
 }
